base64 java12 with apache